# ugv-controller

./: README.md  justfile
ugv_controller_client/: Cargo.toml  UGV-Ctrlr.sh  frontend.py  open-cv.py  pyproject.toml  requirements.txt
ugv_controller_client/lib_ctrlr/: config.py  controls.py  logger.py
ugv_controller_client/src/: lib.rs  main.rs
ugv_controller_serv/: Cargo.toml  go2rtc.yaml  justfile  pyproject.toml
ugv_controller_serv/src/: lib.rs  server.rs  signal.rs
ugv_controller_serv/src.rtmp/: lib.rs  main.rs  server.rs
ugv_controller_types/: Cargo.toml  pyproject.toml
ugv_controller_types/src/: lib.rs
