[package]
name = "ugv_controller_client"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ugv_controller_client"
crate-type = ["cdylib"]

[dependencies]
anyhow = { version = "1.0.102", features = ["backtrace"] }
async-broadcast = "0.7.2"
async-trait = "0.1.89"
base64 = "0.22.1"
ctrlc = "3.5.2"
env_logger = "0.11.9"
futures = "0.3.32"
hyper = { version = "0.14.32", features = ["full"] }
lazy_static = "1.5.0"
log = { version = "0.4.29", features = ["std"] }
pyo3 = "0.28.2"
rand = "0.10.0"
rtc = "0.20.0-alpha.1"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
webrtc = "0.20.0-alpha.1"
