[package]
name = "ugv_controller_serv"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ugv_controller_serv"
crate-type = ["cdylib"]

[dependencies]
env_logger = "0.11.9"
log = { version = "0.4.29", features = ["std"] }
pyo3 = "0.28.2"
rtmp-rs = "0.5.0"
tokio = { version = "1.50.0", features = ["full"] }
